# RAG_General_Template

./: .env.sample  .gitignore  README.md  hello.py  m.ipynb  pyproject.toml  requirements.txt
app/: constants.py  main.py
app/config/: logging_config.py  settings.py
app/core/: auth.py  constants.py  dependencies.py  events.py
app/db/: base.py  session.py
app/db/models/: __init__.py  chat_history.py  user.py
app/routes/: auth.py  constants.py  conversation.py  users.py
app/schemas/: auth.py  chat.py  user.py
app/services/: agent.py  constants.py  embedding_functions.py  item_service.py  prompts.py  user_service.py
app/services/RAG/: document_parser.py  llm_search.py  prompts.py  vectorstore.py
app/services/tools/: __init__.py  search.py  test_content.py  vectorstore.py
app/tests/: test_items.py  test_main.py  test_users.py
app/utils/: email.py  hash.py  validators.py
scripts/: run_lint_checks.sh
